--- a/Code/python/apiCall.ipynb
+++ b/Code/python/apiCall.ipynb
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -990,12 +990,21 @@
     "    food_data = requests.get(target_url).json()\n",
     "    print(ndbno)\n",
     "    name = food_data['foods'][0]['food']['desc']['name']\n",
-    "    calories = food_data['foods'][0]['food']['nutrients'][0]['value']\n",
-    "    protein = food_data['foods'][0]['food']['nutrients'][1]['value']\n",
-    "    fat = food_data['foods'][0]['food']['nutrients'][2]['value']\n",
-    "    carb = food_data['foods'][0]['food']['nutrients'][3]['value']\n",
-    "    fiber = food_data['foods'][0]['food']['nutrients'][4]['value']\n",
-    "    sugar = food_data['foods'][0]['food']['nutrients'][5]['value']\n",
+    "    nuts = food_data['foods'][0]['food']['nutrients']\n",
+    "    for h in nuts:\n",
+    "        \n",
+    "        if h['nutrient_id'] == '208':\n",
+    "            calories = h['value']\n",
+    "        elif h['nutrient_id'] == '203':     \n",
+    "            protein = h['value']\n",
+    "        elif h['nutrient_id'] == '204':    \n",
+    "            fat = h['value']\n",
+    "        elif h['nutrient_id'] == '205':    \n",
+    "            carb = h['value']\n",
+    "        elif h['nutrient_id'] == '291':    \n",
+    "            fiber = h['value']\n",
+    "        elif h['nutrient_id'] == '269':    \n",
+    "            sugar = h['value']\n",
     "\n",
     "    foodNutrientData.append({\"Name\": name, \n",
     "                   \"Energy (kcal)\": calories, \n",
@@ -1010,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1056,43 +1065,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>148</td>\n",
        "      <td>7.66</td>\n",
-       "      <td>72.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Turkey, Ground, raw</td>\n",
        "      <td>19.66</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>Turkey, Ground, raw</td>\n",
-       "      <td>148</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6.30</td>\n",
-       "      <td>61.21</td>\n",
-       "      <td>15.70</td>\n",
        "      <td>14.27</td>\n",
-       "      <td>Veggie burgers or soyburgers, unprepared</td>\n",
        "      <td>177</td>\n",
+       "      <td>6.30</td>\n",
        "      <td>4.9</td>\n",
+       "      <td>Veggie burgers or soyburgers, unprepared</td>\n",
+       "      <td>15.70</td>\n",
+       "      <td>1.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>21.19</td>\n",
-       "      <td>61.06</td>\n",
-       "      <td>16.88</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>Pork, fresh, ground, raw</td>\n",
        "      <td>263</td>\n",
+       "      <td>21.19</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>Pork, fresh, ground, raw</td>\n",
+       "      <td>16.88</td>\n",
+       "      <td>1.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8.10</td>\n",
-       "      <td>73.24</td>\n",
-       "      <td>17.44</td>\n",
        "      <td>0.04</td>\n",
-       "      <td>Chicken, ground, raw</td>\n",
        "      <td>143</td>\n",
+       "      <td>8.10</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>Chicken, ground, raw</td>\n",
+       "      <td>17.44</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1101,20 +1110,20 @@
       "text/plain": [
        "  Carbohydrates (g) Energy (kcal) Fat (g) Fiber (g)  \\\n",
        "0              0.00           259   20.54       0.0   \n",
-       "1              7.66         72.36   19.66      0.00   \n",
-       "2              6.30         61.21   15.70     14.27   \n",
-       "3             21.19         61.06   16.88      0.00   \n",
-       "4              8.10         73.24   17.44      0.04   \n",
+       "1              0.00           148    7.66       0.0   \n",
+       "2             14.27           177    6.30       4.9   \n",
+       "3              0.00           263   21.19       0.0   \n",
+       "4              0.04           143    8.10       0.0   \n",
        "\n",
        "                                       Name Protein (g) Sugar (g)  \n",
        "0            GROUND BEEF, UPC: 011110979711       16.96      0.00  \n",
-       "1                       Turkey, Ground, raw         148       0.0  \n",
-       "2  Veggie burgers or soyburgers, unprepared         177       4.9  \n",
-       "3                  Pork, fresh, ground, raw         263       0.0  \n",
-       "4                      Chicken, ground, raw         143       0.0  "
+       "1                       Turkey, Ground, raw       19.66      0.00  \n",
+       "2  Veggie burgers or soyburgers, unprepared       15.70      1.07  \n",
+       "3                  Pork, fresh, ground, raw       16.88      1.07  \n",
+       "4                      Chicken, ground, raw       17.44      0.00  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,11 +1135,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "food_df.to_csv(\"nutritionData.csv\", index_label=\"Food_ID\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(food_data['foods'][0]['food']['nutrients'])"
    ]
   },
   {
